-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.7.2, Qt Creator 4.8.0, Qt Creator 4.8.1, Qt Creator 4.8.2, Qt Creator 4.9.0-beta1
-
None
-
1.macOS Mojave
2.Xcode10
-
-
fd47b37298 (qt-creator/qt-creator/8.0) fd47b37298 (qt-creator/qt-creator/master) fd47b37298 (qt-creator/tqtc-qt-creator/8.0)
when add QMAKE_CXXFLAGS += -fopenmp to my Qt project file qt_omp_test.pro, the clang tidy will report fatal error: 'endian.h'
Please refer to the attachment qt project for more information.
For Gerrit Dashboard: QTCREATORBUG-22136 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
417019,2 | ProjectExplorer: Do not remove "-Xclang" from command line | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |