ProjectExplorer: Do not remove "-Xclang" from command line

... when retrieving built-in header paths.

Fixes: QTCREATORBUG-22136
Change-Id: I2e403392b14b4cdea89fc33eb503fff303618d71
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>